--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                             <i class="fas fa-times"></i>
                                         </div>
                                         <div class="nav-logo">
-                                            <a href='javascript:void(0)'><img src="assets/images/logo/logo-black.png" alt="Logo" /></a>
+                                            <a href='javascript:void(0)'><img src="assets/images/logo/greensolarlogo.svg" alt="Logo" /></a>
                                         </div>
                                         <div class="menu-outer">
                                             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
