--- a/index.html
+++ b/index.html
@@ -837,10 +837,10 @@
                                         </form>
                                         <div class="footer-social">
                                             <div class="footer-social-icon d-flex">
-                                                <a href="javascript:void(0)" target="_blank"> <i class="fa-brands fa-facebook-f"></i></a>
-                                                <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                                <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                                <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                                <a href="javascript:void(0)"> <i class="fa-brands fa-facebook-f"></i></a>
+                                                <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in"></i></a>
+                                                <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
+                                                <a href="javascript:void(0)"><i class="fa-brands fa-instagram"></i></a>
                                             </div>
                                         </div>
                                     </div>
