--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </section>
             <!-- service section end -->
             <!-- choose section start -->
-            <section class="choose-sec sec-ptb">
+            <section class="choose-sec sec-ptb why-choose">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-xl-4">
@@ -555,7 +555,7 @@
             </section>
             <!-- testimonial section end -->
             <!-- faq section start -->
-            <section class="faq-sec sec-ptb bg-deep-white">
+            <section class="faq-sec sec-ptb bg-deep-white bg-deep-cho">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -612,7 +612,7 @@
             </section>
             <!-- faq section end -->
             <!-- blog section start -->
-            <section class="blog-sec sec-ptb">
+            <section class="blog-sec sec-ptb bg-deep-cho">
                 <div class="container">
                     <div class="row">
                         <div class="offset-lg-2 col-lg-8">
@@ -854,7 +854,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="footer-copyright-text">
-                                    <p><a href="https://gedexo.com/" class="font-18">Gedexo</a> @ 2024. All Rights Reserved</p>
+                                    <p><a href="https://gedexo.com/" class="font-18" style="color: #287501;">Gedexo</a> @ 2024. All Rights Reserved</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
